# ros2_camera_screen_navigation

./: README.md  package.xml  setup.cfg  setup.py
RobotModelnURDF/turtlebot3_waffle/: model.config  model.sdf
RobotModelnURDF/turtlebot3_waffle/meshes/: lds.dae  left_tire.dae  right_tire.dae
launch/: floor_plan_furnished.launch.py  monitor_only.launch.py  monitor_with_gazebo.launch.py
models/chair/: model.config  model.sdf
models/chair/meshes/: chair.dae
models/desk_left/: model.config  model.sdf
models/desk_right/: model.config  model.sdf
models/drawer/: model.config  model.sdf
models/floor_-1/: model.config  model.sdf
models/floor_0/: model-1.4.sdf  model.config  model.sdf
models/table_n_chair/: model.config  model.sdf
models/table_n_twoChair/: model.config  model.sdf
touch_navigation/: monitor.py
worlds/: floor_plan_furnished.world
