<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>touch_navigation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="muhsin@todo.todo">muhsin</maintainer>
  <license>TODO: License declaration</license>

  <depend>gazebo_ros_pkgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>
  <depend>lifecycle_msgs</depend>

  <depend>rclpp</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>cv2</depend>
  <depend>cartographer_ros</depend>
  
  <exec_depend></exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
